# DnDevice

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  all_code.code-workspace  sdkconfig  sdkconfig.old  test.c  test_battle_mappings.c
main/: CMakeLists.txt  console.c  data_pc.c  data_pc.h  db.c  db.h  device.c  device.h  dnd.h  dnd_battle.c  dnd_battle.h  dndv_comms.c  dndv_comms.h  dndv_db.c  dndv_db.h  dndv_sync.c  dndv_sync.h  dndv_ui.c  dndv_ui.h  helper_functions.c  helper_functions.h  init.c  screen_actions.c  screen_actions.h  screen_control.c  screen_control.h  sd_card.c  sd_card.h  ui_thread.c  ui_thread.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c  ui_comp_optionbutton.h  ui_comp_playerkickpanel.c  ui_comp_playerkickpanel.h
main/ui/fonts/: ui_font_Aniron_Bold_50.c  ui_font_Black_Chancery_14.c  ui_font_Black_Chancery_20.c  ui_font_Black_Chancery_25.c  ui_font_Black_Chancery_50.c  ui_font_Draconis_50.c  ui_font_Draconis_Bold_50.c  ui_font_Draconis_Bold_Italics_50.c  ui_font_Dragon_Force_50.c  ui_font_Dungeon_50.c
main/ui/images/: ui_img_1128815670.c  ui_img_1631664762.c  ui_img_1701153993.c  ui_img_1956738688.c  ui_img_2048466797.c  ui_img_2075715036.c  ui_img_2136458485.c  ui_img_241387375.c  ui_img_539176514.c  ui_img_552092932.c  ui_img_851249624.c  ui_img_conditionextra_cover_half_png.c  ui_img_conditionextra_cover_threequarter_png.c  ui_img_conditionextra_cover_total_png.c  ui_img_conditionextra_new_disarmed_png.c  ui_img_conditionextra_new_hidden_png.c  ui_img_conditionextra_new_obscured_png.c  ui_img_conditionextra_new_raging_png.c  ui_img_conditionextra_new_surprised_png.c  ui_img_conditions_new_blinded_png.c  ui_img_conditions_new_charmed_png.c  ui_img_conditions_new_deafened_png.c  ui_img_conditions_new_exhausion_png.c  ui_img_conditions_new_frightened_png.c  ui_img_conditions_new_grappled_png.c  ui_img_conditions_new_incapacitated_png.c  ui_img_conditions_new_invisible_png.c  ui_img_conditions_new_paralyzed_png.c  ui_img_conditions_new_petrified_png.c  ui_img_conditions_new_poisoned_png.c  ui_img_conditions_new_prone_png.c  ui_img_conditions_new_restrained_png.c  ui_img_conditions_new_stunned_png.c  ui_img_conditions_new_unconcious_png.c  ui_img_d20_png.c  ui_img_final_heart_border_png.c  ui_img_final_heart_png.c  (+26 more)
main/ui_pc_sync/: ui.c  ui.h  ui_events.c  ui_events.h
old/: init.c  (+8 more)
(+134 files in other folders)
