idf_component_register(SRCS "init.c" "console.c" "dnd.c" "dndv_comms.c" "dndv_data.c" "dndv_internals.c" "dndv_log.c" "dndv_sync.c" "dndv_ui.c"
                    "ui/ui.c" "ui/ui_helpers.c" 
    "ui/screens/ui_Select_GM_Screen.c"
    "ui/screens/ui_Input_Key_Screen.c"
    "ui/screens/ui_Choose_PC_Screen.c"
    "ui/screens/ui_Ready_To_Start_Screen.c"
                    INCLUDE_DIRS "." 
                     )