SET(SOURCES screens/ui_HealthProfile.c
    screens/ui_PlayerProfile.c
    screens/ui_IntroScreen.c
    screens/ui_PlayerCreation.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_final_heart_png.c
    images/ui_img_final_heart_border_png.c
    images/ui_img_playericons_icon_warlock_png.c
    images/ui_img_conditions_new_blinded_png.c
    images/ui_img_conditions_new_charmed_png.c
    images/ui_img_conditions_new_deafened_png.c
    images/ui_img_conditions_new_exhausion_png.c
    images/ui_img_conditions_new_frightened_png.c
    images/ui_img_conditionextra_cover_half_png.c
    images/ui_img_conditionextra_cover_threequarter_png.c
    images/ui_img_conditionextra_cover_total_png.c
    images/ui_img_final_shield_png.c
    images/ui_img_final_shield_border_png.c
    images/ui_img_conditionextra_new_disarmed_png.c
    images/ui_img_conditions_new_grappled_png.c
    images/ui_img_conditionextra_new_hidden_png.c
    images/ui_img_conditions_new_incapacitated_png.c
    images/ui_img_conditions_new_invisible_png.c
    images/ui_img_conditionextra_new_obscured_png.c
    images/ui_img_conditions_new_paralyzed_png.c
    images/ui_img_conditions_new_petrified_png.c
    images/ui_img_conditions_new_poisoned_png.c
    images/ui_img_conditions_new_prone_png.c
    images/ui_img_conditionextra_new_raging_png.c
    images/ui_img_conditions_new_restrained_png.c
    images/ui_img_conditionextra_new_surprised_png.c
    images/ui_img_conditions_new_stunned_png.c
    images/ui_img_conditions_new_unconcious_png.c
    images/ui_img_images_d20_png.c
    fonts/ui_font_Black_Chancery_14.c
    fonts/ui_font_Black_Chancery_16.c
    fonts/ui_font_Black_Chancery_20.c
    fonts/ui_font_Black_Chancery_25.c
    fonts/ui_font_Black_Chancery_30.c
    fonts/ui_font_Black_Chancery_50.c
    fonts/ui_font_Dungeon_50.c)

add_library(ui ${SOURCES})
